--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 # Stuff TODO:
 
-- Upload the circuitpython uf2 file to here (Git LFS if needed)
-- Create a how to install & use for circuitpython
+- ~~Upload the circuitpython uf2 file to here (Git LFS if needed)~~
+- ~~Create a how to install & use for circuitpython~~
 
-- Create a main.py script that takes the commands from a commands.txt file and runs them through the HID
+- ~~Create a main.py script that takes the commands from a commands.txt file and runs them through the HID~~
 
 - Add functionality for a button to initiate the attack
 - Add functionality for a menu (LCD/OLED)
